[gd_scene load_steps=28 format=2]

[ext_resource path="res://Content/Entities/Enemies/Beetle/Beetle.gd" type="Script" id=1]
[ext_resource path="res://Content/Entities/Enemies/Beetle/RootState.gd" type="Script" id=2]
[ext_resource path="res://Content/Entities/Util/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Content/Entities/Util/WalkDectector.gd" type="Script" id=4]
[ext_resource path="res://Content/Class/DamageHurtbox.gd" type="Script" id=5]
[ext_resource path="res://Content/Entities/Util/DashTarget.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/Entity/Enemy/Beetle/beetle.png" type="Texture" id=7]
[ext_resource path="res://Content/Class/DamageHitbox.gd" type="Script" id=8]
[ext_resource path="res://Content/Entities/Enemies/Beetle/Walking.gd" type="Script" id=9]
[ext_resource path="res://Content/Entities/Enemies/Beetle/Airborne.gd" type="Script" id=10]
[ext_resource path="res://Content/Entities/Enemies/Beetle/Dead.gd" type="Script" id=11]
[ext_resource path="res://Content/Entities/Enemies/Beetle/DeadNormal.gd" type="Script" id=12]
[ext_resource path="res://Content/Entities/Enemies/Beetle/DeadFlung.gd" type="Script" id=13]
[ext_resource path="res://Content/Entities/Enemies/Beetle/BeetleTransitConditions.gd" type="Script" id=14]
[ext_resource path="res://Art/Entity/Enemy/Beetle/panic.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 15 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 15 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 15 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.375, 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7.5, 6.2 )

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 6.5, 5 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "dead"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[node name="Beetle" type="KinematicBody2D"]
light_mask = 0
position = Vector2( 0, -8 )
collision_layer = 8
collision_mask = 57
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 7 )
hframes = 2
vframes = 2

[node name="Panic" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -7, -8 )
frames = SubResource( 15 )
frame = 4
speed_scale = 2.0
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 4
collision_mask = 6
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.375, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="WalkDectector" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="VLeft" type="RayCast2D" parent="WalkDectector"]
position = Vector2( -7, 8 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 33

[node name="VRight" type="RayCast2D" parent="WalkDectector"]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 33

[node name="HLeft" type="RayCast2D" parent="WalkDectector"]
position = Vector2( -7.5, 0 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 25

[node name="HRight" type="RayCast2D" parent="WalkDectector"]
position = Vector2( 7.5, 0 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 25

[node name="DashTarget" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="DashTarget" index="0"]
position = Vector2( -0.5, 2 )
shape = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="RootState" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Walking" type="Node" parent="StateMachine/RootState"]
script = ExtResource( 9 )

[node name="Airborne" type="Node" parent="StateMachine/RootState"]
script = ExtResource( 10 )

[node name="Dead" type="Node" parent="StateMachine/RootState"]
script = ExtResource( 11 )

[node name="DeadNormal" type="Node" parent="StateMachine/RootState/Dead"]
script = ExtResource( 12 )

[node name="DeadFlung" type="Node" parent="StateMachine/RootState/Dead"]
script = ExtResource( 13 )

[node name="TransitConditions" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StateMachine"]
anims/RESET = SubResource( 6 )
anims/dead = SubResource( 8 )
anims/walk = SubResource( 7 )

[node name="FlungTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[editable path="DashTarget"]
